--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,9 @@ dependencies:
   font_awesome_flutter: ^9.2.0
   internet_connection_checker: ^0.0.1+3
   dio: ^4.0.6
-  # build_runner:
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   auto_route: ^3.2.4
+  build_runner: ^2.1.8
   auto_route_generator: ^3.2.3
 
 dev_dependencies:
@@ -55,24 +53,11 @@ flutter_icons:
   
   # auto_route_generator: ^3.2.3 
   # run command : flutter packages pub run build_runner watch --delete-conflicting-outputs/build 
-  build_runner:
+  # build_runner:
   
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^1.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
