--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   get_it: ^7.2.0
   flutter_bloc: ^8.0.1
   equatable: ^2.0.3
@@ -39,6 +41,8 @@ dependencies:
   auto_route: ^3.2.4
   build_runner: ^2.1.8
   auto_route_generator: ^3.2.3
+  intl: ^0.17.0
+  translator: ^0.1.7
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +62,7 @@ flutter_icons:
   flutter_lints: ^1.0.0
 
 flutter:
+  generate: true
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
